# SlicerVolumeFlipper

./: .gitignore  CMakeLists.txt  README.md
Flipper/: CMakeLists.txt  Flipper.py  test.ipynb
Flipper/Resources/UI/: Flipper.ui
